# fs-inventory

./: CLAUDE.md  Cargo.toml  Containerfile  README.md  build.rs  package.toml
.github/workflows/: ci.yml  release.yml
proto/: inventory.proto
src/: bus_handler.rs  cli.rs  error.rs  lib.rs  main.rs  models.rs  repo.rs  store.rs
src/api/: grpc.rs  mod.rs  rest.rs
src/entity/: installed_resource.rs  mod.rs  service_instance.rs
tests/: inventory_test.rs
