[package]
name        = "fs-inventory"
description = "Local inventory of installed FreeSynergy resources (fs-inventory.db)"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-inventory"

[dependencies]
fs-types = { path = "../fs-libs/fs-types" }
fs-bus   = { path = "../fs-bus" }

serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1" }
thiserror   = { version = "2" }
tracing     = { version = "0.1" }
chrono      = { version = "0.4", features = ["serde"] }
async-trait = { version = "0.1" }

sea-orm = { version = "=2.0.0-rc.37", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
