[package]
name        = "fs-inventory"
description = "Local inventory of installed FreeSynergy resources (fs-inventory.db)"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-inventory"

[[bin]]
name = "fs-inventory"
path = "src/main.rs"

[dependencies]
fs-types  = { path = "../fs-libs/fs-types" }
fs-error  = { path = "../fs-libs/fs-error" }
fs-db     = { path = "../fs-db" }
fs-bus    = { path = "../fs-bus" }
fs-i18n   = { path = "../fs-i18n" }

# sea-orm: required for entity derive macros (DeriveEntityModel/DeriveRelation).
# Business logic uses fs-db::sea_orm; this dep is limited to entity/ layer.
sea-orm = { version = "=2.0.0-rc.37", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
tracing     = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# REST + OpenAPI
axum              = "0.7"
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http        = { version = "0.6", features = ["trace"] }

# Runtime + Logging
tokio              = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
